crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_java_currency_symbol_identifier_start.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
¢value

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    FieldDeclaration
      ClassType
        ClassTypeSegmentList
          ClassTypeSegmentNode
            AnnotationList
            Name
              Identifier "¢value" @ 0..7
      VariableDeclaratorList
        VariableDeclarator
  Eof "" @ 7..7

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=7..7 message="expected variable name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=7..7 message="expected `;` after field declaration"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(7), end: TextSize(7) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(7), end: TextSize(7) }) message=expected `;` after field declaration
