crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_non_ascii_string_literal_content.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"™"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StringLiteral "\"™\"" @ 0..5
  Eof "" @ 5..5

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..5 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(5) }) message=unexpected token at top level
