crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_non_empty_string_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"abc" "hello world"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StringLiteral "\"abc\"" @ 0..5 trailing=[Whitespace " "]
      StringLiteral "\"hello world\"" @ 6..19
  Eof "" @ 19..19

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..5 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(5) }) message=unexpected token at top level
