crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_raw_single_quote_string_literal_content.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"can't" "'"

syntax:
syntax:
CompilationUnit
  ErrorNode
    StringLiteral "\"can't\"" @ 0..7 trailing=[Whitespace " "]
    StringLiteral "\"'\"" @ 8..11
  Eof "" @ 11..11

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..7 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(7) }) message=unexpected token at top level
