crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_raw_supplementary_identifier_start.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
𝒂

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    FieldDeclaration
      ClassType
        ClassTypeSegmentList
          ClassTypeSegmentNode
            AnnotationList
            Name
              Identifier "𝒂" @ 0..4
      VariableDeclaratorList
        VariableDeclarator
  Eof "" @ 4..4

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=4..4 message="expected variable name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=4..4 message="expected `;` after field declaration"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(4), end: TextSize(4) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(4), end: TextSize(4) }) message=expected `;` after field declaration
