crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_single_character_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'a' '%' '™'

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      CharacterLiteral "'a'" @ 0..3 trailing=[Whitespace " "]
      CharacterLiteral "'%'" @ 4..7 trailing=[Whitespace " "]
      CharacterLiteral "'™'" @ 8..13
  Eof "" @ 13..13

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..3 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(3) }) message=unexpected token at top level
